--- a/libraries/dynamic-ui-react/src/style/components/_d-close.scss
+++ b/libraries/dynamic-ui-react/src/style/components/_d-close.scss
@@ -1,6 +1,5 @@
 .d-close {
   display: flex;
-  align-self: center;
   padding: 0;
   background: transparent;
   border: 0;
